@@ -7,6 +7,9 @@ import ma.inpt.cedoc.model.enums.reinscription_enums.AvisEnum;
 import ma.inpt.cedoc.model.enums.reinscription_enums.DemandeReinscriptionEnum;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.rest.webmvc.ResourceNotFoundException;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
@@ -32,23 +35,27 @@ public class AvisReinscriptionServiceImpl implements AvisReinscriptionService {
     private final AvisResinscriptionMapper avisResinscriptionMapper;
     private final DirecteurDeTheseRoleRepository directeurDeTheseRepo;
     private final DemandeReinscriptionRepository demandeReinscriptionRepository;
-    private final ProfesseurService professeurService;
 
-    public List<AvisReinscriptionResponseDTO> getAllAvis() {
-        List<AvisReinscription> avis = avisReinscriptionRepo.findAll();
-        return avis.stream()
-                .map(avisResinscriptionMapper::toResponseDTO)
-                .collect(Collectors.toList());
+    public Page<AvisReinscriptionResponseDTO> getAllAvis(Pageable pageable) {
+        Page<AvisReinscription> avis = avisReinscriptionRepo.findAll(pageable);
+        return avis.map(avisResinscriptionMapper::toResponseDTO);
     }
 
     @Override
-    public List<AvisReinscriptionResponseDTO> getAvisByDirecteurThese(Long id) {
+    public Page<AvisReinscriptionResponseDTO> getAvisByDirecteurThese(Long id, Pageable pageable) {
         DirecteurDeTheseRole directeurDeThese = directeurDeTheseRepo.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Directeur de these "+id+" n'est pas trouvé"));
         List<AvisReinscription> avisList = directeurDeThese.getAvisReinscriptionList();
-        return avisList.stream()
+        List<AvisReinscriptionResponseDTO> avisListDTO = avisList.stream()
                 .map(avisResinscriptionMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
+
+        // manual pagination
+        int start = (int) pageable.getOffset();
+        int end = Math.min(start + pageable.getPageSize(), avisListDTO.size());
+        List<AvisReinscriptionResponseDTO> pageContent = avisListDTO.subList(start, end);
+
+        return new PageImpl<>(pageContent, pageable, avisListDTO.size());
     }
 
     public AvisReinscriptionResponseDTO getAvisById(Long id) {
